# koko.claude-code-usage-menubar

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  privacy.yml  release.yml  run-all.yml  security.yml
.scratch/refactor-quality/: PRD.md
.scratch/refactor-quality/issues/: 01-extract-update-tray-icon.md  02-strip-async-noise.md  03-cache-dark-mode.md  04-state-structs.md  05-split-fetch-usage.md  06-http-classify-tests.md  07-throttle-cache-tests.md  08-frontend-cleanup.md
docs/plans/: stable-code-signing.md
scripts/: check-outdated-quarantine.mjs  release.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: usage_response.json
src-tauri/src/: commands.rs  lib.rs  main.rs  parser.rs  tray_icon.rs
src-tauri/src/state/: mod.rs  payload_cache.rs  poller.rs  token_cache.rs
src/lib/: store.svelte.ts  usage.ts
src/lib/components/: PopupView.svelte  ProgressBar.svelte
src/routes/: +page.svelte
tests/: usage.test.ts
